@@ -298,7 +298,7 @@ ACE_Timer_List_T<TYPE, FUNCTOR, ACE_LOCK>::cancel (long timer_id,
                                             skip_close,
                                             cookie);
 
-      this->cancel_i (n, skip_close);
+      this->cancel_i (n);
 
       return 1;
     }
@@ -328,7 +328,7 @@ ACE_Timer_List_T<TYPE, FUNCTOR, ACE_LOCK>::cancel (const TYPE &type, int skip_cl
               ACE_Timer_Node_T<TYPE>* tmp = n;
               n = n->get_next();
 
-              this->cancel_i (tmp, skip_close);
+              this->cancel_i (tmp);
             }
           else
             {
@@ -371,8 +371,7 @@ ACE_Timer_List_T<TYPE, FUNCTOR, ACE_LOCK>::unlink (ACE_Timer_Node_T<TYPE>* n)
 
 /// Shared subset of the two cancel() methods.
 template <class TYPE, class FUNCTOR, class ACE_LOCK> void
-ACE_Timer_List_T<TYPE, FUNCTOR, ACE_LOCK>::cancel_i (ACE_Timer_Node_T<TYPE>* n,
-                                                     int skip_close)
+ACE_Timer_List_T<TYPE, FUNCTOR, ACE_LOCK>::cancel_i (ACE_Timer_Node_T<TYPE>* n)
 {
   this->unlink (n);
   this->free_node (n);
